recursion.lessons.recursion.spiral.SpiralUse.scala.error
SpiralUse:3: error: ')' expected but ';' found.
    spiral(100,100,2,2;)
                      ^SpiralUse:3: error: illegal start of statement
    spiral(100,100,2,2;)
                       ^